[bug 884816] flickering in the start page

--- a/kitsune/sumo/static/less/main.less
+++ b/kitsune/sumo/static/less/main.less
@@ -1116,6 +1116,10 @@ input[type=button],
     display: block;
   }
 
+  > li {
+    min-height: 156px;
+  }
+
   .logo-sprite {
     float: left;
     margin: 8px 15px 8px 0;
